<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>dudu</artifactId>

   <build>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <release>11</release>
            </configuration>
            <groupId>org.apache.maven.plugins</groupId>
            <version>3.8.1</version>
         </plugin>
      </plugins>
   </build>
   <dependencies>
      <dependency>
         <artifactId>junit</artifactId>
         <groupId>junit</groupId>
         <scope>test</scope>
         <version>4.11</version>
      </dependency>
   </dependencies>
   <groupId>github.jadetang</groupId>
   <modelVersion>4.0.0</modelVersion>

   <version>1.0-SNAPSHOT</version>

</project>